{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 12,
  "lineage": "e333b901-df42-4b89-c155-a0f8e6ea786b",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-008c6427c8facbe08",
            "arn": "arn:aws:ec2:us-west-2:499191346827:instance/i-09a84bfc57376fa1f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a84bfc57376fa1f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0afc6ed08150b00aa",
            "private_dns": "ip-192-168-0-186.us-west-2.compute.internal",
            "private_ip": "192.168.0.186",
            "public_dns": "ec2-54-188-102-176.us-west-2.compute.amazonaws.com",
            "public_ip": "54.188.102.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02f96ea5f067b0051",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d15c55ca4dfff36",
            "tags": {
              "Name": "test-tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d46403249df84582"
            ]
          },
          "dependencies": [
            "module.myvpc.aws_security_group.ssh",
            "module.myvpc.aws_subnet.Public-subnet",
            "module.myvpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0489c5851f574b5fb",
            "owner_id": "499191346827",
            "tags": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-084caa1cfc02b327a"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-092a366966d90e0c4",
            "owner_id": "499191346827",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private_Route_table"
            },
            "vpc_id": "vpc-084caa1cfc02b327a"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cd85d0f321b84e3e",
            "owner_id": "499191346827",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0489c5851f574b5fb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRoute-Table"
            },
            "vpc_id": "vpc-084caa1cfc02b327a"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.gw",
            "module.myvpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ae6639dd978234a",
            "route_table_id": "rtb-092a366966d90e0c4",
            "subnet_id": "subnet-07d5a9fb66a03d71c"
          },
          "dependencies": [
            "module.myvpc.aws_route_table.PrivateRT",
            "module.myvpc.aws_subnet.Private-subnet",
            "module.myvpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092c4c36a07c08eed",
            "route_table_id": "rtb-0cd85d0f321b84e3e",
            "subnet_id": "subnet-05d15c55ca4dfff36"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.gw",
            "module.myvpc.aws_route_table.PublicRT",
            "module.myvpc.aws_subnet.Public-subnet",
            "module.myvpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:security-group/sg-0a9e160e7e16fd64b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9e160e7e16fd64b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "for mysql",
            "name_prefix": null,
            "owner_id": "499191346827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-084caa1cfc02b327a"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:security-group/sg-0d46403249df84582",
            "description": "enable 22 port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d46403249df84582",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "enable 22 port for ec2 ",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "enable ssh",
            "name_prefix": null,
            "owner_id": "499191346827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "enable-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-084caa1cfc02b327a"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:subnet/subnet-07d5a9fb66a03d71c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-07d5a9fb66a03d71c",
            "map_public_ip_on_launch": false,
            "owner_id": "499191346827",
            "tags": {
              "Name": "Private-subnet"
            },
            "vpc_id": "vpc-084caa1cfc02b327a"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:subnet/subnet-08a0652b5d9860c76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-08a0652b5d9860c76",
            "map_public_ip_on_launch": false,
            "owner_id": "499191346827",
            "tags": {
              "Name": "Private-subnet-1"
            },
            "vpc_id": "vpc-084caa1cfc02b327a"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:subnet/subnet-05d15c55ca4dfff36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-05d15c55ca4dfff36",
            "map_public_ip_on_launch": false,
            "owner_id": "499191346827",
            "tags": {
              "Name": "Public-subnet"
            },
            "vpc_id": "vpc-084caa1cfc02b327a"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "network",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:vpc/vpc-084caa1cfc02b327a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-051a79da4d082436f",
            "default_route_table_id": "rtb-03ec2fec9c12897d7",
            "default_security_group_id": "sg-097aab5ff240b3fdc",
            "dhcp_options_id": "dopt-6757c91f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-084caa1cfc02b327a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03ec2fec9c12897d7",
            "owner_id": "499191346827",
            "tags": {
              "Name": "vpctf"
            }
          }
        }
      ]
    }
  ]
}